@@ -12,9 +12,10 @@ Stable versions
 	- add sanity check to MDL/RAD/MGT/IMF/RTM/DT pattern loader
 	- add sanity check to OKT sample chunk loader
 	- add sanity check to Archimedes Tracker format test
+	- add sanity check to Digital Symphony track loader
 	- add sanity check to SQSH depacker
 	- add sanity check to arc depacker
-	- add sanity check for AMD and number of patterns
+	- add sanity check for AMD number of patterns
 	- add sanity check for STX number of patterns
 	- add sanity check for MMD1/3 number of channels
 	- add sanity check for MMD1/3 instrument type
